REBOOT - project structure for codemagic and build pipelines (#8)
